--- a/app/src/main/res/layout/fragment_add_transaction.xml
+++ b/app/src/main/res/layout/fragment_add_transaction.xml
@@ -5,14 +5,16 @@
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
                                                    android:background="#F0F0F0"
-                                                   tools:context=".AddTransactionFragment">
+                                                   tools:context=".AddTransactionFragment"
+                                                   tools:layout_editor_absoluteY="0dp"
+                                                   tools:layout_editor_absoluteX="0dp">
 
     <!-- Toolbar -->
     <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="@color/gradient_1_purple"
             app:layout_constraintTop_toTopOf="parent">
 
         <TextView
@@ -20,7 +22,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/new_transaction"
                 android:textColor="@android:color/white"
-                android:textSize="20sp" />
+                android:textSize="20sp"/>
 
     </androidx.appcompat.widget.Toolbar>
 
@@ -39,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/income"
-                android:backgroundTint="#80CBC4" />
+                android:backgroundTint="#80CBC4"/>
 
         <Button
                 android:id="@+id/btnExpense"
@@ -48,7 +50,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/expense"
-                android:backgroundTint="#CE93D8" />
+                android:backgroundTint="#CE93D8"/>
 
     </com.google.android.material.button.MaterialButtonToggleGroup>
 
@@ -63,7 +65,7 @@
             android:minHeight="48dp"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
-            app:layout_constraintTop_toBottomOf="@id/toggleGroup" />
+            app:layout_constraintTop_toBottomOf="@id/toggleGroup"/>
 
     <!-- Category Spinner -->
     <Spinner
@@ -72,7 +74,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:minHeight="48dp"
-            app:layout_constraintTop_toBottomOf="@id/editTextDate" />
+            app:layout_constraintTop_toBottomOf="@id/editTextDate"/>
 
     <!-- Amount Input -->
     <EditText
@@ -85,7 +87,7 @@
             android:minHeight="48dp"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
-            app:layout_constraintTop_toBottomOf="@id/spinnerCategory" />
+            app:layout_constraintTop_toBottomOf="@id/spinnerCategory"/>
     <!-- Note Input -->
     <EditText
             android:id="@+id/editTextNote"
@@ -95,7 +97,7 @@
             android:hint="Note"
             android:inputType="textMultiLine"
             android:minLines="3"
-            app:layout_constraintTop_toBottomOf="@id/editTextAmount" />
+            app:layout_constraintTop_toBottomOf="@id/editTextAmount"/>
 
     <!-- Save Button -->
     <Button
@@ -106,7 +108,7 @@
             android:text="Save"
             android:backgroundTint="#F48FB1"
             app:layout_constraintBottom_toTopOf="@id/calculatorLayout"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     <!-- Calculator Layout -->
 
@@ -126,7 +128,8 @@
                 android:layout_columnWeight="1"
                 android:text="7"
                 android:textColor="@android:color/white"
-                android:background="?android:attr/selectableItemBackground" />
+                android:background="@color/gradient_2_purple" tools:layout_editor_absoluteY="539dp"
+                tools:layout_editor_absoluteX="0dp"/>
 
         <Button
                 android:id="@+id/btn8"
@@ -135,8 +138,8 @@
                 android:layout_columnWeight="1"
                 android:text="8"
                 android:textColor="@android:color/white"
-                android:background="?android:attr/selectableItemBackground" android:layout_row="0"
-                android:layout_column="1"/>
+                android:background="@color/gradient_2_purple" android:layout_row="0"
+                android:layout_column="1" tools:layout_editor_absoluteY="539dp" tools:layout_editor_absoluteX="103dp"/>
         <Button
                 android:id="@+id/btn9"
                 android:layout_width="0dp"
@@ -144,7 +147,8 @@
                 android:layout_columnWeight="1"
                 android:text="9"
                 android:textColor="@android:color/white"
-                android:background="?android:attr/selectableItemBackground" />
+                android:background="@color/gradient_2_purple" tools:layout_editor_absoluteY="539dp"
+                tools:layout_editor_absoluteX="206dp"/>
 
         <Button
                 android:id="@+id/btnMultiply"
@@ -153,7 +157,8 @@
                 android:layout_columnWeight="1"
                 android:text="×"
                 android:textColor="@android:color/white"
-                android:background="?android:attr/selectableItemBackground" />
+                android:background="@color/gradient_2_purple" tools:layout_editor_absoluteY="539dp"
+                tools:layout_editor_absoluteX="309dp"/>
 
         <Button
                 android:id="@+id/btn4"
@@ -162,7 +167,8 @@
                 android:layout_columnWeight="1"
                 android:text="4"
                 android:textColor="@android:color/white"
-                android:background="?android:attr/selectableItemBackground" />
+                android:background="@color/gradient_2_purple" tools:layout_editor_absoluteY="587dp"
+                tools:layout_editor_absoluteX="0dp"/>
 
         <Button
                 android:id="@+id/btn5"
@@ -171,7 +177,8 @@
                 android:layout_columnWeight="1"
                 android:text="5"
                 android:textColor="@android:color/white"
-                android:background="?android:attr/selectableItemBackground" />
+                android:background="@color/gradient_2_purple" tools:layout_editor_absoluteY="587dp"
+                tools:layout_editor_absoluteX="103dp"/>
 
         <Button
                 android:id="@+id/btn6"
@@ -180,7 +187,8 @@
                 android:layout_columnWeight="1"
                 android:text="6"
                 android:textColor="@android:color/white"
-                android:background="?android:attr/selectableItemBackground" />
+                android:background="@color/gradient_2_purple" tools:layout_editor_absoluteY="587dp"
+                tools:layout_editor_absoluteX="206dp"/>
 
         <Button
                 android:id="@+id/btnMinus"
@@ -189,7 +197,8 @@
                 android:layout_columnWeight="1"
                 android:text="-"
                 android:textColor="@android:color/white"
-                android:background="?android:attr/selectableItemBackground" />
+                android:background="@color/gradient_2_purple" tools:layout_editor_absoluteY="587dp"
+                tools:layout_editor_absoluteX="309dp"/>
 
         <Button
                 android:id="@+id/btn1"
@@ -198,7 +207,8 @@
                 android:layout_columnWeight="1"
                 android:text="1"
                 android:textColor="@android:color/white"
-                android:background="?android:attr/selectableItemBackground" />
+                android:background="@color/gradient_2_purple" tools:layout_editor_absoluteY="635dp"
+                tools:layout_editor_absoluteX="0dp"/>
 
         <Button
                 android:id="@+id/btn2"
@@ -207,7 +217,8 @@
                 android:layout_columnWeight="1"
                 android:text="2"
                 android:textColor="@android:color/white"
-                android:background="?android:attr/selectableItemBackground" />
+                android:background="@color/gradient_2_purple" tools:layout_editor_absoluteY="635dp"
+                tools:layout_editor_absoluteX="103dp"/>
 
         <Button
                 android:id="@+id/btn3"
@@ -216,7 +227,8 @@
                 android:layout_columnWeight="1"
                 android:text="3"
                 android:textColor="@android:color/white"
-                android:background="?android:attr/selectableItemBackground" />
+                android:background="@color/gradient_2_purple" tools:layout_editor_absoluteY="635dp"
+                tools:layout_editor_absoluteX="206dp"/>
 
         <Button
                 android:id="@+id/btnPlus"
@@ -225,7 +237,8 @@
                 android:layout_columnWeight="1"
                 android:text="+"
                 android:textColor="@android:color/white"
-                android:background="?android:attr/selectableItemBackground" />
+                android:background="@color/gradient_2_purple" tools:layout_editor_absoluteY="635dp"
+                tools:layout_editor_absoluteX="309dp"/>
 
         <Button
                 android:id="@+id/btnDoubleZero"
@@ -234,7 +247,8 @@
                 android:layout_columnWeight="1"
                 android:text="00"
                 android:textColor="@android:color/white"
-                android:background="?android:attr/selectableItemBackground" />
+                android:background="@color/gradient_2_purple" tools:layout_editor_absoluteY="683dp"
+                tools:layout_editor_absoluteX="0dp"/>
 
         <Button
                 android:id="@+id/btn0"
@@ -243,7 +257,8 @@
                 android:layout_columnWeight="1"
                 android:text="0"
                 android:textColor="@android:color/white"
-                android:background="?android:attr/selectableItemBackground" />
+                android:background="@color/gradient_2_purple" tools:layout_editor_absoluteY="683dp"
+                tools:layout_editor_absoluteX="103dp"/>
 
         <Button
                 android:id="@+id/btnDot"
@@ -252,7 +267,8 @@
                 android:layout_columnWeight="1"
                 android:text="."
                 android:textColor="@android:color/white"
-                android:background="?android:attr/selectableItemBackground" />
+                android:background="@color/gradient_2_purple" tools:layout_editor_absoluteY="683dp"
+                tools:layout_editor_absoluteX="206dp"/>
 
         <Button
                 android:id="@+id/btnEquals"
@@ -261,7 +277,8 @@
                 android:layout_columnWeight="1"
                 android:text="="
                 android:textColor="@android:color/white"
-                android:background="?android:attr/selectableItemBackground" />
+                android:background="@color/gradient_2_purple" tools:layout_editor_absoluteY="683dp"
+                tools:layout_editor_absoluteX="309dp"/>
 
     </GridLayout>
 
