--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,12 +51,14 @@
                 android:textSize="25sp"
                 android:layout_width="60dp"
                 android:layout_height="68dp"
-                android:id="@+id/button"
+                android:id="@+id/newTransaction_btn"
                 android:backgroundTint="@color/trnasacBnt_orange"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginStart="176dp"
-                android:layout_marginBottom="52dp"/>
+                android:layout_marginBottom="52dp"
+                android:layout_marginEnd="175dp"
+                app:layout_constraintEnd_toEndOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
