--- a/app/src/main/res/layout/activity_settings_page.xml
+++ b/app/src/main/res/layout/activity_settings_page.xml
@@ -34,42 +34,42 @@
                 <TextView
                         android:text="Notification"
                         android:layout_width="304dp"
-                        android:layout_height="wrap_content" android:id="@+id/textView4"
+                        android:layout_height="wrap_content" android:id="@+id/notification"
                         android:textSize="45sp" android:textAlignment="center"
                         app:layout_constraintStart_toStartOf="parent"
                         android:layout_marginStart="22dp" app:layout_constraintTop_toTopOf="parent"
                         android:layout_marginTop="4dp" android:layout_marginBottom="20dp"
-                        app:layout_constraintBottom_toTopOf="@+id/switch1" android:layout_marginEnd="24dp"
+                        app:layout_constraintBottom_toTopOf="@+id/reminder_switch" android:layout_marginEnd="24dp"
                         app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
                 <Switch
-                        android:text="Switch"
+                        android:text="Reminder"
                         android:layout_width="309dp"
-                        android:layout_height="42dp" android:id="@+id/switch1"
+                        android:layout_height="42dp" android:id="@+id/reminder_switch"
                         android:textSize="25sp"
                         android:layout_marginEnd="204dp"
                         app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="4dp"
-                        app:layout_constraintTop_toBottomOf="@+id/textView4"
+                        app:layout_constraintTop_toBottomOf="@+id/notification"
                         app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
-                        android:layout_marginBottom="29dp" app:layout_constraintBottom_toTopOf="@+id/textView5"
+                        android:layout_marginBottom="29dp" app:layout_constraintBottom_toTopOf="@+id/time_txt"
                         app:layout_constraintHorizontal_bias="0.0"/>
                 <TextClock
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" android:id="@+id/textClock2"
+                        android:layout_height="wrap_content" android:id="@+id/reminder_timer"
                         android:textSize="20sp"
                         android:layout_marginStart="164dp"
-                        app:layout_constraintStart_toEndOf="@+id/textView5"
+                        app:layout_constraintStart_toEndOf="@+id/time_txt"
                         app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="25dp"
                         app:layout_constraintEnd_toEndOf="parent"
-                        android:layout_marginTop="19dp" app:layout_constraintTop_toBottomOf="@+id/switch1"
+                        android:layout_marginTop="19dp" app:layout_constraintTop_toBottomOf="@+id/reminder_switch"
                         android:layout_marginEnd="180dp"/>
                 <TextView
                         android:text="Time"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" android:id="@+id/textView5"
+                        android:layout_height="wrap_content" android:id="@+id/time_txt"
                         android:textSize="23sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         android:layout_marginBottom="23dp" app:layout_constraintStart_toStartOf="parent"
-                        android:layout_marginStart="180dp" app:layout_constraintEnd_toStartOf="@+id/textClock2"
+                        android:layout_marginStart="180dp" app:layout_constraintEnd_toStartOf="@+id/reminder_timer"
                         android:layout_marginEnd="16dp" app:layout_constraintTop_toTopOf="parent"
                         android:layout_marginTop="147dp"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -90,33 +90,42 @@
                 <TextView
                         android:text="Account"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" android:id="@+id/textView6"
+                        android:layout_height="wrap_content" android:id="@+id/Account_txt"
                         android:textSize="40sp"
                         app:layout_constraintTop_toTopOf="parent"
                         android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                         android:layout_marginStart="101dp" android:layout_marginEnd="101dp"
                         app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="67dp"
                         app:layout_constraintBottom_toTopOf="@+id/button2"/>
+
                 <TextView
                         android:text="Currency"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" android:id="@+id/textView7"
-                        android:textSize="20sp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        android:layout_marginStart="21dp" app:layout_constraintTop_toTopOf="parent"
-                        android:layout_marginTop="87dp" app:layout_constraintEnd_toStartOf="@+id/textView10"
-                        android:layout_marginEnd="10dp" android:layout_marginBottom="22dp"
-                        app:layout_constraintBottom_toTopOf="@+id/button2"/>
-                <TextView
-                        android:text="USD"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" android:id="@+id/textView10"
-                        android:textSize="20sp"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:layout_marginTop="87dp" android:layout_marginBottom="22dp"
-                        app:layout_constraintBottom_toTopOf="@+id/button2" android:layout_marginStart="176dp"
-                        app:layout_constraintStart_toEndOf="@+id/textView7" android:layout_marginEnd="7dp"
-                        app:layout_constraintEnd_toEndOf="parent"/>
+                        android:layout_width="100dp"
+                        android:layout_height="36dp" android:id="@+id/Currency_txt"
+                        android:textSize="25sp"
+                        app:layout_constraintTop_toBottomOf="@+id/Account_txt"
+                        app:layout_constraintEnd_toStartOf="@+id/textInputLayout" android:layout_marginEnd="16dp"
+                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
+                        app:layout_constraintBottom_toTopOf="@+id/button2"
+                        android:layout_marginTop="32dp"/>
+                <com.google.android.material.textfield.TextInputLayout
+                        android:layout_width="152dp"
+                        android:layout_height="38dp"
+                        android:hint="@string/select"
+                        android:textSize="16sp"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                        android:id="@+id/textInputLayout" android:layout_marginBottom="24dp"
+                        app:layout_constraintBottom_toTopOf="@+id/button2" android:layout_marginStart="32dp"
+                        app:layout_constraintStart_toEndOf="@+id/Currency_txt" android:layout_marginEnd="12dp"
+                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="7dp"
+                        app:layout_constraintTop_toBottomOf="@+id/Account_txt">
+
+                    <AutoCompleteTextView
+                            android:id="@+id/dropdown_menu"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="none"/>
+                </com.google.android.material.textfield.TextInputLayout>
                 <Button
                         android:text="Delete Account"
                         android:layout_width="300dp"
@@ -126,7 +135,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                         android:layout_marginBottom="16dp" android:layout_marginTop="22dp"
-                        app:layout_constraintTop_toBottomOf="@+id/textView7"/>
+                        app:layout_constraintTop_toBottomOf="@+id/Currency_txt"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
         <Button
@@ -153,7 +162,7 @@
                     android:layout_marginStart="32dp" app:layout_constraintStart_toEndOf="@+id/imageButton4"
                     app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="6dp"
                     android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginBottom="1dp" app:layout_constraintBottom_toTopOf="@+id/textView13"/>
+                    android:layout_marginBottom="1dp" app:layout_constraintBottom_toTopOf="@+id/settings_txt"/>
             <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" app:srcCompat="@android:drawable/btn_star_big_on"
@@ -187,13 +196,13 @@
                     android:layout_marginStart="32dp"
                     app:layout_constraintStart_toEndOf="@+id/textView11"
                     app:layout_constraintTop_toBottomOf="@+id/imageButton4"
-                    app:layout_constraintEnd_toStartOf="@+id/textView13" android:layout_marginEnd="32dp"
+                    app:layout_constraintEnd_toStartOf="@+id/settings_txt" android:layout_marginEnd="32dp"
                     app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="9dp"/>
             <TextView
                     android:text="Settings"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="19sp" android:id="@+id/textView13"
+                    android:textSize="19sp" android:id="@+id/settings_txt"
                     android:layout_marginStart="32dp"
                     app:layout_constraintStart_toEndOf="@+id/textView12" app:layout_constraintBottom_toBottomOf="parent"
                     android:layout_marginBottom="9dp" android:layout_marginEnd="32dp"
