--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,7 +22,7 @@
                 android:layout_marginTop="-20dp"/>
         <ImageView
                 android:src="@drawable/rocket_fly_icon"
-                android:layout_width="420dp"
+                android:layout_width="42dp"
                 android:layout_height="100dp"
                 android:id="@+id/rocket_home"
                 app:layout_constraintStart_toStartOf="parent"
@@ -36,6 +36,7 @@
                 android:layout_width="412dp"
                 android:layout_height="900dp"
                 app:cardCornerRadius="30dp"
+                app:cardBackgroundColor="@color/backDropMain_darkGrey"
                 app:layout_constraintStart_toStartOf="parent"
                 android:id="@+id/cardView_mainBackdrop"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -141,7 +142,7 @@
                 <!--daily info backdrop-->
                 <androidx.cardview.widget.CardView
                         android:layout_width="376dp"
-                        android:layout_height="150dp"
+                        android:layout_height="200dp"
                         app:cardCornerRadius="30dp"
                         app:cardElevation="5dp"
                         app:layout_constraintTop_toBottomOf="@+id/cardView_mothlyInfoBackdrop"
@@ -155,7 +156,7 @@
 
                         <ListView
                                 android:layout_width="367dp"
-                                android:layout_height="98dp"
+                                android:layout_height="130dp"
                                 android:id="@+id/listView_transaction"
                                 app:layout_constraintTop_toTopOf="parent"
                                 app:layout_constraintBottom_toBottomOf="parent"
