--- a/app/src/main/res/layout/activity_transaction_list_view.xml
+++ b/app/src/main/res/layout/activity_transaction_list_view.xml
@@ -8,4 +8,10 @@
         android:layout_height="match_parent"
         tools:context=".Transaction_ListView" android:orientation="horizontal">
 
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/myList"
+                android:text="test"/>
+
 </LinearLayout>
